fixed toggle layout issue

--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -15,41 +15,42 @@ a{
     &-toggle{
         position: absolute;
         z-index: 999999999;
-        width: 100vw;
-        top: 50px;
-        left: -50px;
-        display: flex;
-        justify-content: flex-end;
-        .circle{
-            top: 5%;
-            right: 3%;
-            border-radius: 50%;
-            border: 2px solid $secondary-color;
-            height: 60px;
-            width: 60px;
+        .toggle-wrapper{
+            width: 100vw;
             display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            .line1{
-                position: absolute;
-                top: 45%;
-                right: 14.5px;
-                background-color: $secondary-color;
-                height: 1px;
-                width: 35px;
-            }
-            .line2{
-                position: absolute;
-                top: 55%;
-                right: 14.5px;
-                background-color: $secondary-color;
-                height: 1px;
-                width: 35px;
-            }
-            opacity : 1;
-            transition: opacity 0.5 ease-out;
-            &:hover{
-                opacity: 0.5;
+            justify-content: end;
+            .circle{
+                margin-top: 30px;
+                margin-right: 30px;
+                border-radius: 50%;
+                border: 2px solid $secondary-color;
+                height: 60px;
+                width: 60px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                .lines{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: center;
+                    height: 10px;
+                    .line1{
+                        background-color: $secondary-color;
+                        height: 1px;
+                        width: 35px;
+                    }
+                    .line2{
+                        background-color: $secondary-color;
+                        height: 1px;
+                        width: 35px;
+                    }
+                }
+                opacity : 1;
+                transition: opacity 0.5 ease-out;
+                &:hover{
+                    opacity: 0.5;
+                }
             }
         }
     }
